--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,11 @@ dependencies {
     kapt 'com.android.databinding:compiler:3.5.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
+    // RxJava2
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+
+    // Tensorflow lite
     implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
     implementation 'org.tensorflow:tensorflow-lite-support:0.0.0-nightly'
     implementation 'org.tensorflow:tensorflow-lite-gpu:0.0.0-nightly'
