add splash and setup activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,18 +20,24 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        tools:ignore="GoogleAppIndexingWarning">
+        tools:ignore="GoogleAppIndexingWarning,LockedOrientationActivity,UnusedAttribute">
         <activity
-            android:name=".MainActivity"
-            android:clearTaskOnLaunch="true"
+            android:name=".presentation.SplashActivity"
+            android:noHistory="true"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme">
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".presentation.dash.DashActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".presentation.main.MainActivity"
+            android:clearTaskOnLaunch="true"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
