--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,5 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite-metadata:0.3.1'
     implementation 'org.tensorflow:tensorflow-lite-support:0.3.1'
     implementation 'org.tensorflow:tensorflow-lite-gpu:2.7.0'
-
+    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.3.1'
 }
