--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,11 +35,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".presentation.setup.SetupActivity"
+            android:name=".presentation.mode.ModeActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".presentation.classification_setup.ClassificationSetupActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".presentation.detection_setup.DetectionSetupActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name=".presentation.main.MainActivity"
+            android:name=".presentation.detection.DetectionActivity"
             android:clearTaskOnLaunch="true"
             android:screenOrientation="portrait" />
     </application>
