--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,10 +38,13 @@
             android:name=".presentation.mode.ModeActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".presentation.classification_setup.ClassificationSetupActivity"
+            android:name="com.example.camera.presentation.classification.setup.ClassificationSetupActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".presentation.detection_setup.DetectionSetupActivity"
+            android:name=".presentation.classification.ClassificationActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.example.camera.presentation.detection.setup.DetectionSetupActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
