--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,23 +24,15 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning,LockedOrientationActivity,UnusedAttribute">
         <activity
-            android:name=".presentation.SplashActivity"
+            android:name=".presentation.MainActivity"
             android:exported="true"
             android:noHistory="true"
-            android:screenOrientation="portrait"
-            android:theme="@style/SplashTheme">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".presentation.mode.ModeActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name="com.example.camera.presentation.setup.SetupActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".presentation.detection.DetectionActivity"
             android:clearTaskOnLaunch="true"
